force-app/main/default/objects/Course__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>CoursesFaculty</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>