force-app/main/default/objects/Course__c/validationRules/Description_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Length</fullName>
    <active>true</active>
    <description>Length of description must be bigger than 10 if not blank</description>
    <errorConditionFormula>IF ( 
 NOT(ISBLANK(Description__c)), 
 LEN(Description__c) &lt;  10, false 
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description length must be greater than 10</errorMessage>
</ValidationRule>