force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Faculty__c</columns>
    <columns>Coordinator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coordinator__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>