force-app/main/default/objects/Course__c/listViews/StudentFaculty_Course.listView-meta.xml
<ListView>
    <fullName>StudentFaculty_Course</fullName>
    <filterScope>Queue</filterScope>
    <label>Student Faculty Queue</label>
    <queue>StudentFaculty</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>